Document quick prod SQLite inspection via the on-box JVM
Add a README "Inspecting the prod database" subsection: query the live
WAL database over `fly ssh` using the JVM and bundled sqlite-jdbc already
in the image — no `sqlite3` install, which the ephemeral rootfs would
drop on every restart. Verified end-to-end against a live-writer WAL db.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>